objects/Event_Packing__c.object
<CustomObject>
    <fields>
        <fullName>AP_Brochure__c</fullName>
        <label>AP Brochure</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>AP_Event_Registration_Form__c</fullName>
        <defaultValue>&quot;https://drive.google.com/file/d/0B9xnKq2CTcNTa0dWWXJIT1c4R2s/view&quot;</defaultValue>
        <label>AP Event Registration Form</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>AP_for_REI_Brochures__c</fullName>
        <label>AP for REI Brochures</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AP_for_REI_Flyers__c</fullName>
        <label>AP for REI Flyers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Additional_Items_1__c</fullName>
        <label>Additional Items 1</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Items_2__c</fullName>
        <label>Additional Items 2</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Items_3__c</fullName>
        <label>Additional Items 3</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreements_Carbon_Copy_Legal_Size__c</fullName>
        <label>Agreements (Carbon Copy, Legal Size)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Anderson_Black_Journals__c</fullName>
        <label>Anderson Black Journals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anderson_Fidget_Spinners_Tacoma__c</fullName>
        <label>Anderson Fidget Spinners - Tacoma</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anderson_Fidget_Spinners__c</fullName>
        <label>Anderson Fidget Spinners</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anderson_Journal_with_Pen__c</fullName>
        <label>Anderson Journal with Pen</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anderson_Journals__c</fullName>
        <label>Anderson Journals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anderson_Lanyards__c</fullName>
        <label>Anderson Lanyards</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anderson_Mini_Mints__c</fullName>
        <label>Anderson Mini Mints</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anderson_Pens__c</fullName>
        <label>Anderson Pens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anderson_Poker_Chips__c</fullName>
        <label>Anderson Poker Chips</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anderson_Table_Linen_1__c</fullName>
        <label>Anderson Table Linen 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Binder_Clips_Medium__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Binder Clips - Medium</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Black_Table_Linen__c</fullName>
        <label>Black Table Linen</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Book_Banner_Table_Top_Asset_Pro__c</fullName>
        <label>Book Banner - Table Top - Asset Pro.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Book_Banner_Table_Top_Private_Vault__c</fullName>
        <label>Book Banner - Table Top - Private Vault</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Book_Banner_Table_Top_Tax_Wise__c</fullName>
        <label>Book Banner - Table Top - Tax Wise</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Books_Asset_Protection__c</fullName>
        <label>Books - Asset Protection</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Books_Bowman_s__c</fullName>
        <label>Books - Bowman&apos;s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Books_How_to_Start_and_Run_Bowman__c</fullName>
        <label>Books - How to Start and Run  (Bowman)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Books_Private_Vault_Re_releasing_On_h__c</fullName>
        <label>Books - Private Vault (Re-releasing/On h</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Books_Private_Vault__c</fullName>
        <label>Books - Private Vault</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Books_Tax_Wise__c</fullName>
        <label>Books - Tax Wise</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Box_Cutter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Box Cutter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Card_Holders_Small__c</fullName>
        <label>Business Card Holders - Small</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_Processor_Shopify_with_Charger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CC Processor (Shopify) with Charger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checked_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Checked By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Event_Packings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Contact_Sheets_for_Strategy_Sessi__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Contact Sheets for Strategy Sessi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corp_Q__c</fullName>
        <label>Corp Q</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Deed_Q__c</fullName>
        <label>Deed Q</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Deliver_To__c</fullName>
        <label>Deliver To:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dymo_Name_Badge_Printer_With_full_roll__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dymo Name Badge Printer (With full roll</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Electronical_Tape__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Electronical Tape</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Electronical_Tape_or_Gaff_Tape__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Electronical Tape or Gaff Tape</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Empty_Black_Folders__c</fullName>
        <label>Empty Black Folders</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Entity_Diagrams_for_each_entity_type__c</fullName>
        <label>Entity Diagrams (for each entity type)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Evaluation_Forms__c</fullName>
        <defaultValue>&quot;https://intranet.andersonadvisors.com/wiki/event-feedback-request/&quot;</defaultValue>
        <label>Event Evaluation Forms</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Event_Office_Supply_Box__c</fullName>
        <label>Event Office Supply Box</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Postcards_Promoting_next_event__c</fullName>
        <label>Event Postcards (Promoting next event)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extension_Cord__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extension Cord</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Highlighters__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Highlighters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Income_Calculator_Worksheets_Infinity_O__c</fullName>
        <label>Income Calculator Worksheets (Infinity O</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Infinity_Workshop_Banner_IIW_Events_On__c</fullName>
        <label>Infinity Workshop Banner - IIW Events On</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_Q__c</fullName>
        <label>LLC Q</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Land_Trust_Q__c</fullName>
        <label>Land Trust Q</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Left_Pocket__c</fullName>
        <inlineHelpText>Empty folders pre-assembled with the following</inlineHelpText>
        <label>Left Pocket</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agreements (Carbon Copy, Legal Size)</fullName>
                </value>
                <value>
                    <fullName>Vertucci Platinum Flyer</fullName>
                </value>
                <value>
                    <fullName>Structure Sheets (Carbon Copy)</fullName>
                </value>
                <value>
                    <fullName>Vertucci Titanium Package FLyer (Event Special Offer)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Living_Trust_Q__c</fullName>
        <label>Living Trust Q</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Metal_Material_Stands_Large__c</fullName>
        <label>Metal Material Stands - Large</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Multi_Colored_Pens_for_AP_Presentation__c</fullName>
        <label>Multi Colored Pens for AP Presentation -</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_Badges_Printed_in_Alpha_Last_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Name Badges - Printed in Alpha Last Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PSP_Pension_401aQ__c</fullName>
        <label>PSP Pension 401aQ</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Packed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Packed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Event_Packings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Packing_Tape__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Packing Tape</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Paperclips__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paperclips</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pens_for_office_use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pens - for office use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Photo_Release_Forms__c</fullName>
        <defaultValue>&quot;https://intranet.andersonadvisors.com/wp-login.php&quot;</defaultValue>
        <label>Photo Release Forms</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Platinum_Flyer__c</fullName>
        <defaultValue>&quot;https://intranet.andersonadvisors.com/wiki/flyer-platinum/&quot;</defaultValue>
        <label>Platinum Flyer</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Power_Strip_1_Registration_2_Processin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Power Strip (1-Registration, 2-Processin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Power_Strip__c</fullName>
        <label>Power Strip</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Powerpoint_Clicker__c</fullName>
        <label>Powerpoint Clicker</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Printer_with_Wireless_Access_Extra_Ink__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Printer with Wireless Access &amp; Extra Ink</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quantity_10__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_11__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_12__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Registration_Sign_In_Sheets__c</fullName>
        <label>Registration Sign In Sheets</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Right_Pocket__c</fullName>
        <inlineHelpText>Empty folders pre-assembled with the following</inlineHelpText>
        <label>Right Pocket</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Corp Q</fullName>
                </value>
                <value>
                    <fullName>LLC Q</fullName>
                </value>
                <value>
                    <fullName>Living Trust Q</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sample_Corporate_Doc_Binder__c</fullName>
        <label>Sample Corporate Doc Binder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sample_LLC_Doc_Binder__c</fullName>
        <label>Sample LLC Doc Binder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sample_Living_Trust_Binder__c</fullName>
        <label>Sample Living Trust Binder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scanner_with_Power_Cord__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scanner with Power Cord</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scissors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scissors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scotch_Tape__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scotch Tape</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_on_Date__c</fullName>
        <label>Sent on Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sharpies__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sharpies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Solo_Pension_401aQ__c</fullName>
        <label>Solo Pension 401aQ</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Staple_Puller__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Staple Puller</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stapler__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stapler</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sticky_Notes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sticky Notes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Strategy_Asset_Q_s_Help_info_Double__c</fullName>
        <label>Strategy/ Asset Q&apos;s (Help info ) Double</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Structure_Handouts_SIW_Only__c</fullName>
        <label>Structure Handouts (SIW Only)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Structure_Sheets_Carbon_Copy__c</fullName>
        <label>Structure Sheets (Carbon Copy)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Tax_Cheat_Sheet__c</fullName>
        <label>Tax Cheat Sheet</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Tax_Package_Flyers__c</fullName>
        <defaultValue>&quot;https://intranet.andersonadvisors.com/wiki/tax-packages/&quot;</defaultValue>
        <label>Tax Package Flyers</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Titanium_Package_Event_Special_Offer_Fl__c</fullName>
        <defaultValue>&quot;https://intranet.andersonadvisors.com/wiki/unlimited-llc-package/&quot;</defaultValue>
        <label>Titanium Package (Event Special Offer Fl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Tracking_1__c</fullName>
        <label>Tracking #</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking_2__c</fullName>
        <label>Tracking #</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking_3__c</fullName>
        <label>Tracking #</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking__c</fullName>
        <label>Tracking #</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPS_Return_Shipping_Labels__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UPS Return Shipping Labels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vertucci_Branded_Lanyards_Provided_by_V__c</fullName>
        <label>Vertucci Branded Lanyards (Provided by V</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vertucci_Branded_Namebadges_Provided_by__c</fullName>
        <label>Vertucci Branded Namebadges (Provided by</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vertucci_Filing_Fee_Form__c</fullName>
        <defaultValue>&quot;https://drive.google.com/file/d/0B9xnKq2CTcNTWk5XaExRMFhfc2c/view&quot;</defaultValue>
        <label>Vertucci Filing Fee Form</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Vertucci_Platinum_Flyers__c</fullName>
        <label>Vertucci Platinum Flyers</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Vertucci_Titanium_Package_Flyers_Event__c</fullName>
        <label>Vertucci Titanium Package Flyers (Event</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Wholesale_Trust_Snapcase_AP_Only__c</fullName>
        <label>Wholesale Trust Snapcase - AP Only</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wholesale_Trust_Snapcase__c</fullName>
        <label>Wholesale Trust Snapcase</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Wifi_Hotspot_with_Data_Processing_Advi__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wifi Hotspot with Data (Processing, Advi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wifi_Hotspot_with_Data__c</fullName>
        <label>Wifi Hotspot with Data</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3_Black_Table_Linens_NVREA_PROVIDES__c</fullName>
        <label>3 - Black Table Linens - NVREA PROVIDES</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X5_Anderson_Banners_NVREA_PROVIDES__c</fullName>
        <label>5 - Anderson Banners - NVREA PROVIDES</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>iPad__c</fullName>
        <label>iPad</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>iPad_for_Book_Sale_Processing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>iPad for Book Sale Processing</label>
        <type>Checkbox</type>
    </fields>
    <label>Event Packing</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Packing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Packings</pluralLabel>
    <recordTypes>
        <fullName>Event_Packets</fullName>
        <active>true</active>
        <label>Event Packets</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>